[package]
name = "resque-web"
version = "0.2.0"
authors = ["mh039333 <mike.harris@cerner.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0"
env_logger = "0.6"
r2d2 = "0.8.9"
config = "0.10.1"
redis = { version = "0.17.0", features = [ "cluster", "r2d2"] }
plugin_manager = { path = "plugin_manager", version = "0.1.0" }