[package]
name = "resque-web"
version = "0.2.0"
authors = ["mh039333 <mike.harris@cerner.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "2.0"
actix-files = "0.5"
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0"
env_logger = "0.6"
config = "0.10.1"
redis = { version = "0.19", features = ["aio", "connection-manager", "tokio-comp"] }
futures-util = "0.3"
plugin_manager = { path = "plugin_manager", version = "0.1.0" }
tokio = { version = "1", features = ["sync"] }